force-app/main/default/objects/SolicitacaodeCadastro__c/SolicitacaodeCadastro__c.object-meta.xml
<CustomObject>
    <label>Solicitação de Cadastro</label>
    <nameField>
        <displayFormat>S{0}</displayFormat>
        <label>Nome de Solicitação de Cadastro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações de Cadastro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>