force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Aprovado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado</label>
    <type>Checkbox</type>
</CustomField>