force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Ativar_no_SAP__c.field-meta.xml
<CustomField>
    <fullName>Ativar_no_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quando marcado, após aprovar, criará o produto no SAP</inlineHelpText>
    <label>Ativar no SAP</label>
    <type>Checkbox</type>
</CustomField>