force-app/main/default/objects/SolicitacaodeCadastro__c/fields/C_d_Fabricante__c.field-meta.xml
<CustomField>
    <fullName>C_d_Fabricante__c</fullName>
    <label>Cód. Fabricante</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>