force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Categoria_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Categoria_de_compra__c</fullName>
    <inlineHelpText>Apenas para produtos de uso/consumo.</inlineHelpText>
    <label>Categoria de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Categoria_de_compra</valueSetName>
    </valueSet>
</CustomField>