force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Controla_Lote_S_rie__c.field-meta.xml
<CustomField>
    <fullName>Controla_Lote_S_rie__c</fullName>
    <label>Controla Lote / Série</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lote</fullName>
            </value>
            <value>
                <fullName>Série</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>