force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Decreto_PIS_COFINS__c.field-meta.xml
<CustomField>
    <fullName>Decreto_PIS_COFINS__c</fullName>
    <label>Decreto PIS/COFINS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>