force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>