force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Ex_Tarifario__c.field-meta.xml
<CustomField>
    <fullName>Ex_Tarifario__c</fullName>
    <label>Ex-Tarifário</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>