force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Fam_lia__c.field-meta.xml
<CustomField>
    <fullName>Fam_lia__c</fullName>
    <label>Família</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALTO FLUXO</fullName>
            </value>
            <value>
                <fullName>ANESTESIA</fullName>
            </value>
            <value>
                <fullName>APOIO A MOBILIDADE</fullName>
            </value>
            <value>
                <fullName>ARCO CIRURGICO</fullName>
            </value>
            <value>
                <fullName>ASPIRADORES</fullName>
            </value>
            <value>
                <fullName>BERÇOS</fullName>
            </value>
            <value>
                <fullName>BERÇOS AQUECIDOS</fullName>
            </value>
            <value>
                <fullName>BPAP</fullName>
            </value>
            <value>
                <fullName>CADEIRAS</fullName>
            </value>
            <value>
                <fullName>CAMAS</fullName>
            </value>
            <value>
                <fullName>CAMAS HOSPITALARES</fullName>
            </value>
            <value>
                <fullName>CARDIOLOGIA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA MINIMAMENTE INVASIVA</fullName>
            </value>
            <value>
                <fullName>CIRURGIA ROBÓTICA</fullName>
            </value>
            <value>
                <fullName>CONCENTRADORES</fullName>
            </value>
            <value>
                <fullName>ELETROCIRURGIA</fullName>
            </value>
            <value>
                <fullName>ELETRO CIRURGIA</fullName>
                <isActive>false</isActive>
                <label>ELETRO CIRURGIA</label>
            </value>
            <value>
                <fullName>ELEVADORES</fullName>
            </value>
            <value>
                <fullName>ENDOSCOPIA</fullName>
            </value>
            <value>
                <fullName>FOCOS CIRÚRGICOS</fullName>
            </value>
            <value>
                <fullName>FOTOTERAPIA</fullName>
            </value>
            <value>
                <fullName>GERAL</fullName>
            </value>
            <value>
                <fullName>GINECOLOGIA</fullName>
            </value>
            <value>
                <fullName>HIGIENE</fullName>
            </value>
            <value>
                <fullName>IMAGEM</fullName>
            </value>
            <value>
                <fullName>INALADORES</fullName>
            </value>
            <value>
                <fullName>INCUBADORAS</fullName>
            </value>
            <value>
                <fullName>INFUSÃO</fullName>
            </value>
            <value>
                <fullName>INSTRUMENTAIS CIRURGICOS</fullName>
            </value>
            <value>
                <fullName>INSTRUMENTAIS DESCARTÁVEIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>