force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Fonte_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Fonte_do_Produto__c</fullName>
    <label>Fonte do Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - NACIONAL</fullName>
            </value>
            <value>
                <fullName>1 - EXTRANGEIRA IMPORTAÇÃO DIRETA</fullName>
            </value>
            <value>
                <fullName>2 - EXTRANGEIRA COM COMPRA NACIONAL</fullName>
            </value>
            <value>
                <fullName>6 - EXTRANGEIRA IMPORTAÇÃO DIRETA SEM SIMILAR NACIONAL</fullName>
            </value>
            <value>
                <fullName>7 - EXTRANGEIRA COMPRA NACIONAL SEM SIMILAR</fullName>
            </value>
            <value>
                <fullName>Internacional</fullName>
                <isActive>false</isActive>
                <label>Internacional</label>
            </value>
            <value>
                <fullName>Nacional</fullName>
                <isActive>false</isActive>
                <label>Nacional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>