force-app/main/default/objects/SolicitacaodeCadastro__c/fields/I_I__c.field-meta.xml
<CustomField>
    <fullName>I_I__c</fullName>
    <label>I.I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>