force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Linha__c.field-meta.xml
<CustomField>
    <fullName>Linha__c</fullName>
    <label>Linha</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>linha</valueSetName>
    </valueSet>
</CustomField>