force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3GREEN</fullName>
            </value>
            <value>
                <fullName>7LIVES</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>ACCUMED</fullName>
            </value>
            <value>
                <fullName>ACROSS</fullName>
            </value>
            <value>
                <fullName>ACTE</fullName>
            </value>
            <value>
                <fullName>AEROGEN</fullName>
            </value>
            <value>
                <fullName>AGATA</fullName>
            </value>
            <value>
                <fullName>AGILE MED</fullName>
            </value>
            <value>
                <fullName>AIR LIQUIDE</fullName>
            </value>
            <value>
                <fullName>AIR SHIELD</fullName>
            </value>
            <value>
                <fullName>AJEL</fullName>
            </value>
            <value>
                <fullName>ALBAN</fullName>
            </value>
            <value>
                <fullName>ALIVE HEART</fullName>
            </value>
            <value>
                <fullName>ALLIAGE</fullName>
            </value>
            <value>
                <fullName>ALPHARAD</fullName>
            </value>
            <value>
                <fullName>ALVIMÉDICA</fullName>
            </value>
            <value>
                <fullName>ANALYSER</fullName>
            </value>
            <value>
                <fullName>ANATONIC</fullName>
            </value>
            <value>
                <fullName>ANESTHESIA</fullName>
            </value>
            <value>
                <fullName>AOC</fullName>
            </value>
            <value>
                <fullName>APC</fullName>
            </value>
            <value>
                <fullName>APK</fullName>
            </value>
            <value>
                <fullName>APPLE</fullName>
            </value>
            <value>
                <fullName>ARJO</fullName>
            </value>
            <value>
                <fullName>ARJOHUNTLEIGH</fullName>
            </value>
            <value>
                <fullName>ARKTUS</fullName>
            </value>
            <value>
                <fullName>ARTIS</fullName>
            </value>
            <value>
                <fullName>ARTROCORP</fullName>
            </value>
            <value>
                <fullName>ASPEN PHARMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>