force-app/main/default/objects/SolicitacaodeCadastro__c/fields/NCM__c.field-meta.xml
<CustomField>
    <fullName>NCM__c</fullName>
    <inlineHelpText>Digite aqui o código NCM ou utilize a barra de busca de NCM acima para pesquisar um correspondente.</inlineHelpText>
    <label>NCM</label>
    <type>TextArea</type>
</CustomField>