force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <label>Nome</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>