force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Numero_Anvisa__c.field-meta.xml
<CustomField>
    <fullName>Numero_Anvisa__c</fullName>
    <label>Num. Anvisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>