force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACESSÓRIO</fullName>
            </value>
            <value>
                <fullName>CONSUMÍVEL</fullName>
            </value>
            <value>
                <fullName>EQUIPAMENTO</fullName>
            </value>
            <value>
                <fullName>IMPLANTE</fullName>
            </value>
            <value>
                <fullName>INSTRUMENTAL</fullName>
            </value>
            <value>
                <fullName>INSUMO</fullName>
            </value>
            <value>
                <fullName>KIT SERVIÇO</fullName>
            </value>
            <value>
                <fullName>MÓDULO</fullName>
            </value>
            <value>
                <fullName>MOVEIS</fullName>
            </value>
            <value>
                <fullName>OPCIONAL</fullName>
            </value>
            <value>
                <fullName>PEÇA</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>SOFTWARE</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>