force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Tipo_de_Produto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Produto__c</fullName>
    <label>Tipo de Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REVENDA</fullName>
            </value>
            <value>
                <fullName>CONSUMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>