force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Unidade_de_medida_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_medida_de_compra__c</fullName>
    <label>Unidade de medida de compra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>