force-app/main/default/objects/SolicitacaodeCadastro__c/fields/URL_da_Imagem__c.field-meta.xml
<CustomField>
    <fullName>URL_da_Imagem__c</fullName>
    <label>URL da Imagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>