force-app/main/default/objects/SolicitacaodeCadastro__c/fields/Valor_de_Venda__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Venda__c</fullName>
    <label>Valor de Venda</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>