force-app/main/default/objects/SolicitacaodeCadastro__c/validationRules/Aprovado.validationRule-meta.xml
<ValidationRule>
    <fullName>Aprovado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Aprovado__c == true,
ISNEW())</errorConditionFormula>
    <errorDisplayField>Aprovado__c</errorDisplayField>
    <errorMessage>Não é permitido criar produtos com o checkbox Aprovado marcado.</errorMessage>
</ValidationRule>