force-app/main/default/objects/SolicitacaodeCadastro__c/validationRules/Compras_aprova.validationRule-meta.xml
<ValidationRule>
    <fullName>Compras_aprova</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
$User.ProfileId != &apos;00e6e000002FEQZ&apos;,
$User.ProfileId != &apos;00eU40000008oAv&apos;,
$User.Id != &apos;0056e00000CeNKN&apos;,
$User.Id != &apos;0055A000008lqdW&apos;,
$User.Id != &apos;0056e00000Cq3gD&apos;,
TEXT($User.Departamento3__c)  != &apos;Compras&apos;,
Aprovado__c == true
)</errorConditionFormula>
    <errorDisplayField>Aprovado__c</errorDisplayField>
    <errorMessage>Apenas o departamento de compras pode aprovar cadastros de produtos.</errorMessage>
</ValidationRule>