force-app/main/default/objects/SolicitacaodeCadastro__c/listViews/C_pia_de_Solicita_es_de_Revenda.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Solicita_es_de_Revenda</fullName>
    <columns>NAME</columns>
    <columns>C_d_Fabricante__c</columns>
    <columns>Nome__c</columns>
    <columns>Modelo__c</columns>
    <columns>Marca__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_Produto__c</field>
        <operation>equals</operation>
        <value>REVENDA</value>
    </filters>
    <filters>
        <field>Aprovado__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Solicitações de Revenda (Aprovados)</label>
</ListView>