force-app/main/default/objects/SolicitacaodeCadastro__c/listViews/Solicita_es_de_Revenda_rejeitado.listView-meta.xml
<ListView>
    <fullName>Solicita_es_de_Revenda_rejeitado</fullName>
    <columns>NAME</columns>
    <columns>C_d_Fabricante__c</columns>
    <columns>Nome__c</columns>
    <columns>Modelo__c</columns>
    <columns>Marca__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Aprovado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_Produto__c</field>
        <operation>equals</operation>
        <value>REVENDA</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>CANCELADO</value>
    </filters>
    <label>Solicitações de Revenda Rejeitado</label>
</ListView>